--- a/resources/views/auth/login.edge
+++ b/resources/views/auth/login.edge
@@ -18,8 +18,11 @@
                                 type="email" 
                                 name="email" 
                                 id="email" 
-                                class="input">
+                                class="input {{ hasErrorFor('email') ? 'is-danger' : '' }}"
+                                value="{{ old('email', '') }}">
                         </div>
+
+                        {{ elIf('<span class="help is-danger">$self</span>', getErrorFor('email'), hasErrorFor('email')) }}
                         
                     </div>
 
@@ -31,8 +34,11 @@
                                 type="password" 
                                 name="password" 
                                 id="password" 
-                                class="input">
+                                class="input {{ hasErrorFor('password') ? 'is-danger' : '' }}"
+                                value="{{ old('password', '') }}">
                         </div>
+
+                        {{ elIf('<span class="help is-danger">$self</span>', getErrorFor('password'), hasErrorFor('password')) }}
                             
                         </div>
                 
